[gd_scene load_steps=16 format=3 uid="uid://cb851jws1vetu"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_ef6ap"]
[ext_resource type="PackedScene" uid="uid://ca3er2h1dxr7c" path="res://scenes/background.tscn" id="1_glaie"]
[ext_resource type="PackedScene" uid="uid://co5fysop5whg4" path="res://scenes/ground.tscn" id="2_mwmp6"]
[ext_resource type="PackedScene" uid="uid://dds632to3valf" path="res://scenes/player.tscn" id="3_exjwa"]
[ext_resource type="PackedScene" uid="uid://do0u7anm0dv1g" path="res://scenes/hud.tscn" id="5_va2l0"]
[ext_resource type="PackedScene" uid="uid://c3jmob6i30h2t" path="res://scenes/game_over.tscn" id="6_sgt0k"]
[ext_resource type="AudioStream" uid="uid://dex2qrrrygaix" path="res://assets/sound/Hurt.wav" id="7_3uecc"]
[ext_resource type="AudioStream" uid="uid://t562fwj27g15" path="res://assets/sound/mileScore.wav" id="8_rg2mv"]

[sub_resource type="Animation" id="Animation_1wk5a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurt:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hqed2"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurt:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"game_over"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yjl66"]
_data = {
"RESET": SubResource("Animation_1wk5a"),
"hurt": SubResource("Animation_hqed2")
}

[sub_resource type="Environment" id="Environment_wavtq"]
background_mode = 3
glow_enabled = true
glow_levels/3 = 0.0
glow_levels/5 = 0.0
glow_normalized = true
glow_intensity = 0.0
glow_strength = 0.0
glow_blend_mode = 1
glow_hdr_threshold = 0.0
glow_hdr_scale = 0.0
glow_hdr_luminance_cap = 0.0
glow_map_strength = 0.0
adjustment_enabled = true

[sub_resource type="Animation" id="Animation_ps71b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorldEnvironment:environment:adjustment_brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WorldEnvironment:environment:adjustment_contrast")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WorldEnvironment:environment:glow_intensity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WorldEnvironment:environment:glow_strength")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WorldEnvironment:environment:glow_hdr_threshold")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WorldEnvironment:environment:glow_hdr_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("WorldEnvironment:environment:glow_hdr_luminance_cap")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("WorldEnvironment:environment:glow_levels/4")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("WorldEnvironment:environment:glow_levels/5")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_3dloc"]
resource_name = "WorldEnvi"
length = 15.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorldEnvironment:environment:adjustment_brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6, 10, 15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.3, 0.58, 0.72]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WorldEnvironment:environment:adjustment_contrast")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.6, 10, 15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.0, 1.14, 1.42, 1.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WorldEnvironment:environment:glow_intensity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WorldEnvironment:environment:glow_strength")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.6, 5, 15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.18, 1.22]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WorldEnvironment:environment:glow_hdr_threshold")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.6),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WorldEnvironment:environment:glow_hdr_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.6),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("WorldEnvironment:environment:glow_hdr_luminance_cap")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.6),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("WorldEnvironment:environment:glow_levels/4")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.51]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("WorldEnvironment:environment:glow_levels/5")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 3.02]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y6y0n"]
_data = {
"RESET": SubResource("Animation_ps71b"),
"WorldEnvi": SubResource("Animation_3dloc")
}

[node name="Main" type="Node" groups=["Main"]]
script = ExtResource("1_ef6ap")

[node name="Background" parent="." instance=ExtResource("1_glaie")]

[node name="Ground" parent="." instance=ExtResource("2_mwmp6")]

[node name="Player" parent="." instance=ExtResource("3_exjwa")]
position = Vector2(98, 471)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 319)
scale = Vector2(8, 8)

[node name="HUD" parent="." instance=ExtResource("5_va2l0")]

[node name="GameOver" parent="." instance=ExtResource("6_sgt0k")]
process_mode = 2

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_3uecc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yjl66")
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wavtq")

[node name="WorldEnvi" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y6y0n")
}

[node name="mileScore" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_rg2mv")
